// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> helpText should render TextArea with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
        <div
          class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jxcXPq"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 libPPx Spaceweb__Space-njatzl-0 cUyWDv"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 fLzvVb"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> helpText with maxLength should render TextArea with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              maxlength="10"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
        <div
          class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jxcXPq"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 libPPx Spaceweb__Space-njatzl-0 cUyWDv"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 fLzvVb"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 iiiHlL"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 fLzvVb"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label renders TextArea with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw Spaceweb__Space-njatzl-0 iqcLxO"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 ioJDih Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 cJPAjH"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 eKLNMF Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              id="sample-id"
              placeholder=""
              rows="3"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label renders TextArea with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <label
      class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 cxwFhF Spaceweb__Space-njatzl-0 egTcPC"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 ioJDih Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 cJPAjH"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 eKLNMF Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              id="sample-id"
              placeholder=""
              rows="3"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> label renders TextArea with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              for="sample-id"
              value=""
              width="medium"
            >
              Sample Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              id="sample-id"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant renders filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <label
      class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 cxwFhF Spaceweb__Space-njatzl-0 egTcPC"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 ioJDih Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 cJPAjH"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 eKLNMF Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              placeholder=""
              rows="3"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> variant renders outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width renders TextArea with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="auto"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 juRaGm Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width renders TextArea with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextArea /> width renders TextArea with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 cBgQdA Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 cILqKw Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 dGEJmw"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="small"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 eRcLdB Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <textarea
              class="TextInputweb__StyledInput-sc-199z6oj-1 dBwonR Sizeweb__Size-sc-10bl685-0 bbAIss Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-area"
              placeholder=""
              rows="1"
              style="height: 0px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;
